<resources>
    <string name="app_name">Neon</string>
    <string name="editor_text_hint">Enter text to display</string>
    <string name="display_button_name">Display</string>
    <string name="default_text">Hello</string>
    <string name="font_size">Font size</string>
    <string name="font_color">Font color</string>
    <string name="speed">Speed</string>
    <string name="cutouts">Display on cutout area</string>
    <string name="background_color">Background</string>
    <string name="shadow">Shadow</string>
    <string name="orientation_label">Lock orientation</string>
    <string name="orientation_no">No</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="reverse_portrait">Reverse portrait</string>
    <string name="reverse_landscape">Reverse landscape</string>
    <string name="vertical">Vertical scroll</string>
    <string name="maxline">Max line number</string>
</resources>