<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editor_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/editor_text_hint"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:text="@string/default_text"
            android:textSize="60sp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:id="@+id/font_size_layout"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_below="@id/editor_text"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="16dp"
                android:text="@string/font_size"
                android:textColor="?android:attr/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/font_size_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/font_size"
                app:trackHeight="12dp"
                app:thumbHeight="25dp"
                android:value="50"
                android:valueFrom="10"
                android:valueTo="500"
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scrolling_speed"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_below="@id/font_size_layout"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="16dp"
                android:text="@string/speed"
                android:textColor="?android:attr/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/speed_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/speed"
                app:trackHeight="12dp"
                app:thumbHeight="25dp"
                android:value="200"
                android:valueFrom="5"
                android:valueTo="2000"
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scrolling_shadow"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_below="@id/scrolling_speed"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="16dp"
                android:text="@string/shadow"
                android:textColor="?android:attr/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/shadow_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/shadow"
                app:trackHeight="12dp"
                app:thumbHeight="25dp"
                android:value="30"
                android:valueFrom="0"
                android:valueTo="150"
                app:labelBehavior="floating" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/orientation_layout"
            style="?android:attr/switchStyle"
            android:layout_width="match_parent"
            android:layout_height="65sp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_below="@id/scrolling_shadow"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/orientation_text"
                app:hintTextAppearance="@style/App.hintTextAppearance"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orientation_label">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/orientation_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/orientation_options"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/color_button"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_below="@id/orientation_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/font_color_button"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40sp"
                android:text="@string/font_color" />

            <Button
                android:id="@+id/background_color_button"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:text="@string/background_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_switch_wrapper"
            style="?android:attr/switchStyle"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/color_button"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="16dp"
                android:text="@string/cutouts"
                android:textColor="?android:attr/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/cutout_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_vertical_wrapper"
            style="?android:attr/switchStyle"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_below="@id/linear_switch_wrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="5sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="16dp"
                android:text="@string/vertical"
                android:textColor="?android:attr/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/vertical_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"/>
        </LinearLayout>
        <Button
            android:id="@+id/display_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_vertical_wrapper"
            android:layout_centerHorizontal="true"
            android:text="@string/display_button_name" />

    </RelativeLayout>
</ScrollView>